divisioni-in-sezioni

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <div class="conteiner"></div>
+    <div class="conteiner">
+        <!-- Header -->
+        <header>
+            <h1></h1>
+        </header>
+        <!-- main -->
+        <main>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </main>
+        <!-- Footer -->
+        <footer>
+            <p></p>
+        </footer>
+    </div>
 </body>
 </html>
