--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory</title>
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="conteiner">
         <!-- Header -->
         <header>
-            <h1></h1>
+            <h1>MEMORY GAME</h1>
         </header>
         <!-- main -->
         <main>
