--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
             <h1>MEMORY GAME</h1>
         </header>
         <!-- main -->
-        <main>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <main class="main-contenitor clearfix">
+                <div class="box">
+                    <div class="n1"> <img class="imagepattern" src="./img/pattern.png" alt=""> <img class="n1-2" src="./img/noun_Bicycle_3134821.png" alt=""></div>
+                    <div class="n2"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                    <div class="n3"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                    <div class="n4"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                </div>
+                <div class="box">
+                    <div class="n5"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                    <div class="n6"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                    <div class="n7"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                    <div class="n8"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                </div>
+                <div class="box">
+                    <div class="n9"> <img class="imagepattern" src="./img/noun_Tractor_3134797.png"><p class="Tractor">Tractor</p></div>
+                    <div class="n10"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                    <div class="n11"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                    <div class="n12"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
+                </div>
         </main>
         <!-- Footer -->
         <footer>
