--- a/index.html
+++ b/index.html
@@ -17,28 +17,59 @@
         </header>
         <!-- main -->
         <main class="main-contenitor clearfix">
-                <div class="box">
-                    <div class="n1"> <img class="imagepattern" src="./img/pattern.png" alt=""> <img class="n1-2" src="./img/noun_Bicycle_3134821.png" alt=""></div>
-                    <div class="n2"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                    <div class="n3"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                    <div class="n4"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                </div>
-                <div class="box">
-                    <div class="n5"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                    <div class="n6"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                    <div class="n7"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                    <div class="n8"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                </div>
-                <div class="box">
-                    <div class="n9"> <img class="imagepattern" src="./img/noun_Tractor_3134797.png"><p class="Tractor">Tractor</p></div>
-                    <div class="n10"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                    <div class="n11"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                    <div class="n12"> <img class="imagepattern" src="./img/pattern.png" alt=""></div>
-                </div>
+            <div class="riquadro">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine2" src="./img/noun_air_balloon_3134741.png" />
+                <div class="testi">Air balloon</div>
+            </div>
+            <div class="riquadro2">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine3" src="./img/noun_Bicycle_3134821.png" />
+            </div>
+            <div class="riquadro3">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine4" src="./img/noun_Cruise_Ship_3134824.png" />
+            </div>
+            <div class="riquadro4">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine5" src="./img/noun_Submarine_3134738.png" />
+            </div>
+            <div class="riquadro5">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine6" src="/img/noun_Tractor_3134797.png" />
+            </div>
+            <div class="riquadro6">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine7" src="/img/noun_Tram_3134750.png" />
+            </div>
+            <div class="riquadro7">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine8" src="./img/noun_air_balloon_3134741.png" />
+            </div>
+            <div class="riquadro8">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine9" src="./img/noun_Bicycle_3134821.png" />
+            </div>
+            <div class="riquadro9">
+                <img class="immagine1" src="./img/noun_Cruise_Ship_3134824.png" />
+                <img class="immagine10" src="./img/noun_Cruise_Ship_3134824.png" />
+            </div>
+            <div class="riquadro10">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine11" src="./img/noun_Submarine_3134738.png" />
+            </div>
+            <div class="riquadro11">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine12" src="/img/noun_Tractor_3134797.png" />
+            </div>
+            <div class="riquadro12">
+                <img class="immagine1" src="/img/pattern.png" />
+                <img class="immagine13" src="/img/noun_Tram_3134750.png" />
+            </div> 
         </main>
         <!-- Footer -->
         <footer>
-            <p></p>
+            <div class="footer">Form Teom Boolean</div>
         </footer>
     </div>
 </body>
